server - CWebMagic - fix S for self references, some cwm type configs and nowrap for tds

--- a/server/root/css/base.css
+++ b/server/root/css/base.css
@@ -87,6 +87,7 @@ table td {
     padding:            0.1em 0.5em 0.1em 0.5em;
     margin:             0.1em;
     vertical-align:     top;
+    white-space: 		nowrap;
 }
 
 .red {
